Updated text and links in static file

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>This HTML page is served from an NGINX Container</h1>
-  <p>Click the link <a href="localhost:90/redirect.html">localhost:80/redirect.html</a> to be redirected to '/proxy'</p>
+  <p>Click the link <a href="/reverse">/reverse</a> to be view the page originally at '/redirect.html'</p>
 </body>
 
 </html>
