--- a/web/redirect.html
+++ b/web/redirect.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>Redirected Page</h1>
-  <p>This page is originally 'redirect.html' but is now served at '/proxy'</p>
+  <p>This page is rendered from 'redirect.html' but can be served at '/reverse'</p>
 </body>
 
 </html>
